tests/paczka1/fuzzy1/56254565.err
Error in line 3: S971 S971 69,3
Error in line 6: VpI0Wbt A486 76,6
Error in line 13: kWVInL8s A998 81,66
Error in line 1: kWVInL8s A486 18,9
Error in line 27: krwa48oaO A998 9,1
